--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,24 @@
     package="pl.szop.andrzejshop">
 
     <application
-        android:name=".MyApplication"
+        android:name="pl.szop.cardeal.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="CarDeal"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.HomeActivity">
+        <activity android:name="pl.szop.cardeal.views.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.ProductsActivity" />
-        <activity android:name=".views.ProductDetailsActivity" />
+        <activity android:name="pl.szop.cardeal.views.ProductsActivity" />
+        <activity android:name="pl.szop.cardeal.views.ProductDetailsActivity" />
         <activity
-            android:name=".views.ImageActivity"
+            android:name="pl.szop.cardeal.views.ImageActivity"
             android:label="@string/title_activity_image"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
