--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pl.szop.andrzejshop">
+    package="pl.szop.cardealshop">
 
     <application
-        android:name=".MyApplication"
+        android:name="pl.szop.cardealshop.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.HomeActivity">
+        <activity android:name="pl.szop.cardealshop.views.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.ProductsActivity" />
-        <activity android:name=".views.ProductDetailsActivity" />
+        <activity android:name="pl.szop.cardealshop.views.ProductsActivity" />
+        <activity android:name="pl.szop.cardealshop.views.ProductDetailsActivity" />
         <activity
-            android:name=".views.ImageActivity"
+            android:name="pl.szop.cardealshop.views.ImageActivity"
             android:label="@string/title_activity_image"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
