--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "pl.rdyszlewski.cardealshop"
+        applicationId "pl.olasek.cardealshop"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
