--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 17 20:50:19 CET 2018
-sdk.dir=F\:\\Android\\SDK
+#Sun Nov 18 14:42:53 CET 2018
+sdk.dir=C\:\\Users\\olasek\\AppData\\Local\\Android\\Sdk
