--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,28 +3,29 @@
     package="pl.szop.cardeal">
 
     <application
-        android:name="pl.szop.cardeal.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="CarDeal"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="pl.szop.cardeal.views.HomeActivity">
+        <activity android:name=".views.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="pl.szop.cardeal.views.ProductsActivity" />
-        <activity android:name="pl.szop.cardeal.views.ProductDetailsActivity" />
+        <activity android:name=".views.ProductsActivity" />
+        <activity android:name=".views.ProductDetailsActivity" />
         <activity
-            android:name="pl.szop.cardeal.views.ImageActivity"
+            android:name=".views.ImageActivity"
             android:label="@string/title_activity_image"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="pl.szop.cardeal.views.CategoryActivity" />
-        <activity android:name="pl.szop.cardeal.views.MainActivity" />
+        <activity android:name=".views.CategoryActivity" />
+        <activity android:name=".views.MainActivity" />
+        <activity android:name=".views.ButtonsActivity"></activity>
     </application>
 
 </manifest>
