--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 21 20:55:16 CET 2018
-sdk.dir=F\:\\Android\\SDK
+#Sun Nov 25 13:15:16 CET 2018
+sdk.dir=C\:\\Users\\olasek\\AppData\\Local\\Android\\Sdk
