--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pl.szop.andrzejshop">
+    package="pl.szop.cardeal">
 
     <application
-        android:name=".MyApplication"
+        android:name="pl.szop.cardeal.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="CarDeal"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".views.HomeActivity">
+        <activity android:name="pl.szop.cardeal.views.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.ButtonsActivity"/>
-        <activity android:name=".views.ProductsActivity" />
-        <activity android:name=".views.ProductDetailsActivity" />
+        <activity android:name="pl.szop.cardeal.views.ButtonsActivity"/>
+        <activity android:name="pl.szop.cardeal.views.ProductsActivity" />
+        <activity android:name="pl.szop.cardeal.views.ProductDetailsActivity" />
         <activity
-            android:name=".views.ImageActivity"
+            android:name="pl.szop.cardeal.views.ImageActivity"
             android:label="@string/title_activity_image"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".views.CategoryActivity" />
-        <activity android:name=".views.CartActivity"
+        <activity android:name="pl.szop.cardeal.views.CategoryActivity" />
+        <activity android:name="pl.szop.cardeal.views.CartActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".views.MainActivity" />
+        <activity android:name="pl.szop.cardeal.views.MainActivity" />
     </application>
 
 </manifest>
