--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'com.inkapplications.viewpageindicator:library:2.4.3'
+    implementation 'me.relex:circleindicator:1.2.2@aar'
 }
