--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "pl.olasek.andrzejshop"
+        applicationId "pl.rdyszlewski.andrzejshop"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -42,5 +42,4 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'com.inkapplications.viewpageindicator:library:2.4.3'
-    implementation 'me.relex:circleindicator:1.2.2@aar'
 }
