--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="CarDeal"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -17,23 +17,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.ButtonsActivity"/>
-        <activity android:name=".views.GridActivity"/>
         <activity android:name=".views.ProductsActivity" />
         <activity android:name=".views.ProductDetailsActivity" />
-        <activity android:name=".views.ViewPagerActivity" />
         <activity
             android:name=".views.ImageActivity"
             android:label="@string/title_activity_image"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".views.CategoryActivity" />
         <activity android:name=".views.CartActivity"
+            android:label="@string/title_activity_cart"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".views.MainActivity" />
+        <activity
+            android:name=".views.FavoritesActivity"
+            android:label="@string/title_activity_favorites"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
-
 
 
 
