--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 25 21:37:40 CET 2018
-sdk.dir=F\:\\Android\\SDK
+#Wed Dec 05 20:13:21 CET 2018
+sdk.dir=C\:\\Users\\olasek\\AppData\\Local\\Android\\Sdk
