--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 05 21:44:51 CET 2018
-sdk.dir=C\:\\Users\\olasek\\AppData\\Local\\Android\\Sdk
+#Wed Dec 12 22:54:37 CET 2018
+sdk.dir=F\:\\Android\\SDK
