--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 13 21:00:08 CET 2019
-sdk.dir=F\:\\Android\\SDK
+#Tue Jan 15 16:58:23 CET 2019
+sdk.dir=C\:\\Users\\olasek\\AppData\\Local\\Android\\Sdk
